# mtr

./: .gitignore  LICENSE  Pipfile  README.md  dtmcheck.py  index.html  main.html  main.py  pyproject.toml  script.js  stations.json  style.css  test.py
data/: default.json
dep/: index.html
js/: data.js  script.js  strftime-min.js
old/btehk-3dmap/: README.md  dtmcheck.py  main.html  script.js  style.css
old/bus/: script.js
old/bus/css/: style.css
old/cky-bus/: index.html
old/cky-bus-v2/: index.html
old/cky-bus-v2/js/: script.js  (+1 more)
old/mtr/: index.html
output/: 1658548800_SHA_daily.csv  1667102400_LFS_daily.csv  1667102400_SHA_hourly.csv  1667102400_SKG_hourly.csv  1667102400_TY1_daily.csv  1667232000_ALL_rh.csv  1667232000_ALL_temp.csv  1667232000_ALL_weather.csv  1667232000_ALL_windDir.csv  1667232000_ALL_windSpeed.csv  1667232000_CCH_daily.csv  1667232000_CCH_hourly.csv  1667232000_G153_daily.csv  1667232000_G153_hourly.csv  1667232000_HKA_daily.csv  1667232000_HKA_hourly.csv  1667232000_LFS_daily.csv  1667232000_LFS_hourly.csv  1667232000_SHA_daily.csv  1667232000_SHA_hourly.csv  1667232000_SKG_daily.csv  1667232000_SKG_hourly.csv  1667232000_TKL_daily.csv  1667232000_TKL_hourly.csv  1667232000_TY1_daily.csv  1667232000_TY1_hourly.csv  1667335402_ALL_rh.csv  1667335402_ALL_temp.csv  1667335402_ALL_weather.csv  1667335402_ALL_windDir.csv  1667335402_ALL_windSpeed.csv  1667335402_ty1_hourly.csv  1667364180_ALL_rh.csv  1667364180_ALL_temp.csv  1667364180_ALL_weather.csv  1667364180_ALL_windDir.csv  1667364180_ALL_windSpeed.csv  1667364180_g153_daily.csv  1667364180_g153_hourly.csv  1667371384_ALL_windSpeed.csv  (+43 more)
output/dep/: 1658548800_SHA_hourly.csv  1667102400_CCH_daily.csv  1667102400_CCH_hourly.csv  1667102400_HKA_daily.csv  1667102400_HKA_hourly.csv  1667102400_LFS_hourly.csv  1667102400_SHA_daily.csv  1667102400_SKG_daily.csv  1667102400_TKL_daily.csv  1667102400_TKL_hourly.csv  1667102400_TY1_hourly.csv  1693406785_ALL_rh.csv  1693406785_ALL_temp.csv  1693406785_ALL_weather.csv  1693406785_ALL_windDir.csv  1693406785_ALL_windSpeed.csv  1693468326_ALL_rh.csv  1693468326_ALL_temp.csv  1693468326_ALL_weather.csv  1693468326_ALL_windDir.csv  1693468326_ALL_windSpeed.csv  1693547275_ALL_rh.csv  1693547275_ALL_temp.csv  1693547275_ALL_weather.csv  1693547275_ALL_windDir.csv  1693547275_ALL_windSpeed.csv  1693561672_ALL_rh.csv  1693561672_ALL_temp.csv  1693561672_ALL_weather.csv  1693561672_ALL_windDir.csv  1693561672_ALL_windSpeed.csv  1693568978_ALL_rh.csv  1693568978_ALL_temp.csv  1693568978_ALL_weather.csv  1693568978_ALL_windDir.csv  1693568978_ALL_windSpeed.csv  1693572539_ALL_rh.csv  1693572539_ALL_temp.csv  1693572539_ALL_windDir.csv  1693572539_ALL_windSpeed.csv  (+42 more)
output_anemometer/: 1667319000_hka_wind.csv  1667319000_shl_wind.csv  1667319000_skg_wind.csv  1667319000_tkl_wind.csv  1667319600_ALL_wind.csv  1667319600_cch_wind.csv  1667319600_lfs_wind.csv  1667319600_se_wind.csv  1667319600_sha_wind.csv  1667322600_cch_wind.csv  1667322600_hka_wind.csv  1667322600_ty1_wind.csv  1667323200_g153_wind.csv  1667323200_lfs_wind.csv  1667323200_sha_wind.csv  1667323200_skg_wind.csv  1667325000_ALL_wind.csv  1667325000_tkl_wind.csv  1667365800_ALL_wind.csv  1667365800_cch_wind.csv  1667365800_g153_wind.csv  1667365800_hka_wind.csv  1667365800_lfs_wind.csv  1667365800_sha_wind.csv  1667365800_skg_wind.csv  1667365800_tkl_wind.csv  1667365800_ty1_wind.csv  1667371200_ALL_wind.csv  1667373600_ALL_wind.csv  1667388600_ALL_wind.csv  1667397600_ALL_wind.csv  1667403000_ALL_wind.csv  1667409000_ALL_wind.csv  1667442600_ALL_wind.csv  1669135800_ALL_wind.csv  1696819800_ALL_wind.csv  cch_wind.csv  hka_wind.csv  lfs_wind.csv  sha_wind.csv  (+2 more)
output_anemometer/dep/: 1667315400_cch_wind.csv  1667315400_hka_wind.csv  1667315400_lfs_wind.csv  1667315400_sha_wind.csv  1667315400_skg_wind.csv  1667315400_tkl_wind.csv  1693469400_ALL_wind.csv  1693547400_ALL_wind.csv  1693562400_ALL_wind.csv  1693571400_ALL_wind.csv  1693572600_ALL_wind.csv  1693575000_ALL_wind.csv  1693575600_ALL_wind.csv  1693576200_ALL_wind.csv  1693580400_ALL_wind.csv  1693581000_ALL_wind.csv  1693582800_ALL_wind.csv  1693586400_ALL_wind.csv  1693587600_ALL_wind.csv  1693618800_ALL_wind.csv  1696743600_ALL_wind.csv  1696762800_ALL_wind.csv  1696773600_ALL_wind.csv  1696796400_ALL_wind.csv
research/: decoded.pptx
src/hkopendata/: cache.py  cli.py
src/hydro/: __init__.py  __main__.py  tiles.py
src/weather/: README.md  __init__.py  __main__.py  api.py  run.py  station.py
v1/: script.js
v1/css/: style.css
v1/js/: script.js
v2/: index.html
(+18 files in other folders)
