[tool.poetry]
name = "hkopendata"
version = "0.0.1"
description = "Tools to download miscallaneous geospatial data"
authors = [
    "cathaypacific8747 <58929011+cathaypacific8747@users.noreply.github.com>",
]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.9.1"
rich = "^13.7.1"
httpx = { extras = ["http2"], version = "^0.27.0" }
pyqt6 = "^6.7.0"
orjson = "^3.10.6"
aiofiles = "^24.1.0"
tqdm = "^4.66.4"
polars = "^1.6.0"


[tool.poetry.group.types.dependencies]
pandas-stubs = "^2.2.2.240603"
types-aiofiles = "^24.1.0.20240626"
types-tqdm = "^4.66.0.20240417"


[tool.poetry.group.dev.dependencies]
ruff = "^0.5.1"
mypy = "^1.10.1"


[tool.poetry.group.hydro.dependencies]
pydantic = "^2.8.2"
pydantic-xml = "^2.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = [
    "E",
    "W",      # pycodestyle
    "F",      # pyflakes
    "I",      # isort
    "NPY",    # numpy
    "NPY201", # numpy
    # "PD",  # pandas
    "DTZ", # flake8-datetimez
    "RUF",
]

[tool.ruff.lint.isort]
known-first-party = ["numpy", "pandas", "pyproj", "shapely"]

[tool.mypy]
python_version = "3.12"
platform = "posix"

color_output = true
pretty = true
show_column_numbers = true
strict = true
check_untyped_defs = true
ignore_missing_imports = true
warn_no_return = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
