[project]
name = "hkopendata"
version = "0.0.1"
description = "Tools to download miscallaneous geospatial data"
authors = [{ name = "cathaypacific8747", email = "58929011+cathaypacific8747@users.noreply.github.com" }]
requires-python = ">=3.9"
readme = "README.md"
license = "MIT"
dependencies = [
    "matplotlib>=3.9.1,<4",
    "rich>=13.7.1,<14",
    "httpx[http2]>=0.27.0,<0.28",
    "pyqt6>=6.7.0,<7",
    "orjson>=3.10.6,<4",
    "aiofiles>=24.1.0,<25",
    "tqdm>=4.66.4,<5",
    "polars>=1.6.0,<2",
]

[dependency-groups]
types = [
    "pandas-stubs>=2.2.2.240603,<3",
    "types-aiofiles>=24.1.0.20240626,<25",
    "types-tqdm>=4.66.0.20240417,<5",
]
dev = [
    "ruff>=0.5.1,<0.6",
    "mypy>=1.10.1,<2",
]
hydro = [
    "pydantic>=2.8.2,<3",
    "pydantic-xml>=2.11.0,<3",
]

[tool.uv]
default-groups = [
    "types",
    "dev",
    "hydro",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
select = [
    "E",
    "W",      # pycodestyle
    "F",      # pyflakes
    "I",      # isort
    "NPY",    # numpy
    "NPY201", # numpy
    # "PD",  # pandas
    "DTZ", # flake8-datetimez
    "RUF",
]

[tool.ruff.lint.isort]
known-first-party = ["numpy", "pandas", "pyproj", "shapely"]

[tool.mypy]
python_version = "3.12"
platform = "posix"

color_output = true
pretty = true
show_column_numbers = true
strict = true
check_untyped_defs = true
ignore_missing_imports = true
warn_no_return = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
