[project]
name = "hkopendata"
version = "0.0.1"
description = "Open geospatial data in Hong Kong"
authors = [
    { name = "cathaypacific8747", email = "58929011+cathaypacific8747@users.noreply.github.com" },
]
requires-python = ">=3.9"
readme = "README.md"
license = "MIT"
dependencies = [
    "aiofiles>=24.1.0",
    "httpx>=0.28.1",
    "orjson>=3.11.0",
    "polars>=1.31.0",
    "rich>=14.0.0",
]

[project.optional-dependencies]
cli = ["appdirs>=1.4.4", "typer>=0.16.0"]
plot = ["matplotlib>=3.9.4", "pyqt6>=6.9.1"]
hydro = ["pydantic>=2.11.7", "pydantic-xml>=2.17.3"]

[project.scripts]
hkopendata = 'hkopendata.cli:app'

[dependency-groups]
types = ["types-aiofiles>=24.1.0.20250708"]
lint = ["ruff>=0.12.4"]
typing = ["mypy>=1.17.0"]

[tool.uv]
default-groups = ["types", "lint", "typing"]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
select = [
    "E",
    "W",      # pycodestyle
    "F",      # pyflakes
    "I",      # isort
    "NPY",    # numpy
    "NPY201", # numpy
    # "PD",  # pandas
    "DTZ", # flake8-datetimez
    "RUF",
]

[tool.ruff.lint.isort]
known-first-party = ["numpy", "pandas", "pyproj", "shapely"]

[tool.mypy]
python_version = "3.9"
platform = "posix"

color_output = true
pretty = true
show_column_numbers = true
strict = true
check_untyped_defs = true
ignore_missing_imports = true
warn_no_return = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
